implementado mínimo de horas trabalhada por semana

--- a/demographic-data-analyser/Untitled.ipynb
+++ b/demographic-data-analyser/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "562c2dcb",
+   "id": "edef4e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a534e24",
+   "id": "ded7cde8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "004492e0",
+   "id": "e7ad96aa",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b962ff85",
+   "id": "ca0acd84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e391ce81",
+   "id": "597f24b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b44c824b",
+   "id": "368c0a92",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "92aa4ee7",
+   "id": "4b9117a8",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "75b08510",
+   "id": "330d518a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b279733d",
+   "id": "939e5892",
    "metadata": {},
    "outputs": [
     {
@@ -1279,8 +1279,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "be74eb3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4355"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lower_education['salary'] == '>50K').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2dae8ed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2        False\n",
+       "3        False\n",
+       "6        False\n",
+       "7         True\n",
+       "10        True\n",
+       "         ...  \n",
+       "32556    False\n",
+       "32557     True\n",
+       "32558    False\n",
+       "32559    False\n",
+       "32560     True\n",
+       "Name: salary, Length: 25070, dtype: bool"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_education['salary'] == '>50K'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "93d80238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3486"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(higher_education['salary'] == '>50K').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "14c9b394",
+   "id": "30542339",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1288,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c49e99a",
+   "id": "ed8ed393",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1296,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc13430",
+   "id": "e2508da7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1304,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "330c22dd",
+   "id": "0898aa85",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1312,23 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55d9d14",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60a61e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "759c4888",
+   "id": "13a914a1",
    "metadata": {},
    "outputs": [],
    "source": []
