--- a/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
+++ b/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "edef4e71",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ded7cde8",
    "metadata": {},
    "outputs": [],
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e2508da7",
    "metadata": {},
    "outputs": [],
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ba82baee",
+   "id": "26a41309",
    "metadata": {},
    "outputs": [
     {
@@ -1493,8 +1493,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "792b5c27",
+   "execution_count": 6,
+   "id": "64c8b1ce",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "Name: native-country, Length: 7841, dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,207 +1526,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "a6efd2d4",
+   "execution_count": 17,
+   "id": "42a29177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "United-States         7171\n",
-       "India                   40\n",
        "?                      146\n",
-       "South                   16\n",
-       "Honduras                 1\n",
-       "Canada                  39\n",
-       "Iran                    18\n",
-       "Mexico                  33\n",
        "Cambodia                 7\n",
-       "Thailand                 3\n",
-       "Taiwan                  20\n",
-       "Portugal                 4\n",
-       "England                 30\n",
+       "Canada                  39\n",
        "China                   20\n",
-       "Philippines             61\n",
-       "Jamaica                 10\n",
-       "Germany                 44\n",
-       "Japan                   24\n",
-       "Italy                   25\n",
-       "Dominican-Republic       2\n",
-       "Cuba                    25\n",
-       "Greece                   8\n",
-       "Peru                     2\n",
-       "Guatemala                3\n",
-       "El-Salvador              9\n",
-       "France                  12\n",
-       "Vietnam                  5\n",
-       "Poland                  12\n",
-       "Puerto-Rico             12\n",
-       "Ireland                  5\n",
-       "Yugoslavia               6\n",
        "Columbia                 2\n",
-       "Haiti                    4\n",
-       "Hong                     6\n",
+       "Cuba                    25\n",
+       "Dominican-Republic       2\n",
        "Ecuador                  4\n",
-       "Nicaragua                2\n",
-       "Trinadad&Tobago          2\n",
+       "El-Salvador              9\n",
+       "England                 30\n",
+       "France                  12\n",
+       "Germany                 44\n",
+       "Greece                   8\n",
+       "Guatemala                3\n",
+       "Haiti                    4\n",
+       "Honduras                 1\n",
+       "Hong                     6\n",
        "Hungary                  3\n",
-       "Scotland                 3\n",
+       "India                   40\n",
+       "Iran                    18\n",
+       "Ireland                  5\n",
+       "Italy                   25\n",
+       "Jamaica                 10\n",
+       "Japan                   24\n",
        "Laos                     2\n",
+       "Mexico                  33\n",
+       "Nicaragua                2\n",
+       "Peru                     2\n",
+       "Philippines             61\n",
+       "Poland                  12\n",
+       "Portugal                 4\n",
+       "Puerto-Rico             12\n",
+       "Scotland                 3\n",
+       "South                   16\n",
+       "Taiwan                  20\n",
+       "Thailand                 3\n",
+       "Trinadad&Tobago          2\n",
+       "United-States         7171\n",
+       "Vietnam                  5\n",
+       "Yugoslavia               6\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counted_country_of_riches = pd.Series(Counter(country_of_riches))\n",
+    "counted_country_of_riches = pd.Series(Counter(country_of_riches)).sort_index()\n",
     "counted_country_of_riches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "2f28e7f0",
+   "execution_count": 18,
+   "id": "095e2018",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "United-States                 29170\n",
-       "Cuba                             95\n",
-       "Jamaica                          81\n",
-       "India                           100\n",
        "?                               583\n",
-       "Mexico                          643\n",
-       "South                            80\n",
-       "Puerto-Rico                     114\n",
-       "Honduras                         13\n",
-       "England                          90\n",
-       "Canada                          121\n",
-       "Germany                         137\n",
-       "Iran                             43\n",
-       "Philippines                     198\n",
-       "Italy                            73\n",
-       "Poland                           60\n",
-       "Columbia                         59\n",
        "Cambodia                         19\n",
-       "Thailand                         18\n",
-       "Ecuador                          28\n",
-       "Laos                             18\n",
-       "Taiwan                           51\n",
-       "Haiti                            44\n",
-       "Portugal                         37\n",
-       "Dominican-Republic               70\n",
-       "El-Salvador                     106\n",
-       "France                           29\n",
-       "Guatemala                        64\n",
+       "Canada                          121\n",
        "China                            75\n",
-       "Japan                            62\n",
-       "Yugoslavia                       16\n",
-       "Peru                             31\n",
-       "Outlying-US(Guam-USVI-etc)       14\n",
-       "Scotland                         12\n",
-       "Trinadad&Tobago                  19\n",
+       "Columbia                         59\n",
+       "Cuba                             95\n",
+       "Dominican-Republic               70\n",
+       "Ecuador                          28\n",
+       "El-Salvador                     106\n",
+       "England                          90\n",
+       "France                           29\n",
+       "Germany                         137\n",
        "Greece                           29\n",
-       "Nicaragua                        34\n",
-       "Vietnam                          67\n",
-       "Hong                             20\n",
-       "Ireland                          24\n",
-       "Hungary                          13\n",
+       "Guatemala                        64\n",
+       "Haiti                            44\n",
        "Holand-Netherlands                1\n",
+       "Honduras                         13\n",
+       "Hong                             20\n",
+       "Hungary                          13\n",
+       "India                           100\n",
+       "Iran                             43\n",
+       "Ireland                          24\n",
+       "Italy                            73\n",
+       "Jamaica                          81\n",
+       "Japan                            62\n",
+       "Laos                             18\n",
+       "Mexico                          643\n",
+       "Nicaragua                        34\n",
+       "Outlying-US(Guam-USVI-etc)       14\n",
+       "Peru                             31\n",
+       "Philippines                     198\n",
+       "Poland                           60\n",
+       "Portugal                         37\n",
+       "Puerto-Rico                     114\n",
+       "Scotland                         12\n",
+       "South                            80\n",
+       "Taiwan                           51\n",
+       "Thailand                         18\n",
+       "Trinadad&Tobago                  19\n",
+       "United-States                 29170\n",
+       "Vietnam                          67\n",
+       "Yugoslavia                       16\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counted_countries = pd.Series(Counter(df['native-country']))\n",
+    "counted_countries = pd.Series(Counter(df['native-country'])).sort_index()\n",
     "counted_countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "c50edfce",
+   "execution_count": 20,
+   "id": "72c317f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "percentage_riches_by_country = counted_country_of_riches / counted_countries"
+    "percentage_riches_by_country = (counted_country_of_riches / counted_countries).sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "18ba6bce",
+   "execution_count": 25,
+   "id": "f06ce35a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "?                             0.250429\n",
-       "Cambodia                      0.368421\n",
-       "Canada                        0.322314\n",
-       "China                         0.266667\n",
-       "Columbia                      0.033898\n",
-       "Cuba                          0.263158\n",
-       "Dominican-Republic            0.028571\n",
-       "Ecuador                       0.142857\n",
-       "El-Salvador                   0.084906\n",
-       "England                       0.333333\n",
-       "France                        0.413793\n",
-       "Germany                       0.321168\n",
-       "Greece                        0.275862\n",
-       "Guatemala                     0.046875\n",
-       "Haiti                         0.090909\n",
-       "Holand-Netherlands                 NaN\n",
-       "Honduras                      0.076923\n",
-       "Hong                          0.300000\n",
-       "Hungary                       0.230769\n",
-       "India                         0.400000\n",
-       "Iran                          0.418605\n",
-       "Ireland                       0.208333\n",
-       "Italy                         0.342466\n",
-       "Jamaica                       0.123457\n",
-       "Japan                         0.387097\n",
-       "Laos                          0.111111\n",
-       "Mexico                        0.051322\n",
-       "Nicaragua                     0.058824\n",
-       "Outlying-US(Guam-USVI-etc)         NaN\n",
-       "Peru                          0.064516\n",
-       "Philippines                   0.308081\n",
-       "Poland                        0.200000\n",
-       "Portugal                      0.108108\n",
-       "Puerto-Rico                   0.105263\n",
-       "Scotland                      0.250000\n",
-       "South                         0.200000\n",
-       "Taiwan                        0.392157\n",
-       "Thailand                      0.166667\n",
-       "Trinadad&Tobago               0.105263\n",
-       "United-States                 0.245835\n",
-       "Vietnam                       0.074627\n",
-       "Yugoslavia                    0.375000\n",
-       "dtype: float64"
+       "'Iran'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "percentage_riches_by_country"
+    "percentage_riches_by_country.idxmax()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "44834e01",
+   "id": "1f6282a9",
    "metadata": {},
    "outputs": [
     {
