concluído e comentada a última variável, que trata da contagem da ocupação dos mais ricos indianos - último commit antes do início da testagem

--- a/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
+++ b/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
@@ -1725,6 +1725,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "d9debb5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'Prof-specialty': 25,\n",
+       "         'Exec-managerial': 8,\n",
+       "         'Other-service': 2,\n",
+       "         'Tech-support': 2,\n",
+       "         'Transport-moving': 1,\n",
+       "         'Sales': 1,\n",
+       "         'Adm-clerical': 1})"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counted_riches_in_india = Counter(df.loc[ ( df[ 'native-country' ] == 'India' ) & ( df[ 'salary' ] == '>50K' ), 'occupation' ])\n",
+    "counted_riches_in_india"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b0a1df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b6d36c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c978b8d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50c42f02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "13a914a1",
    "metadata": {},
