rich_percentage, além da falha no arredondamento, também tinha uma falha de cálculo, que estava dividindo apenas o número de ricos pelo número de pessoas que trabalham 1 hora por semana, ao invés de dividir o número de ricos que trabalham uma hora por semana pelo númerode pessoas que trabalham uma hora por semana

--- a/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
+++ b/demographic-data-analyser/testes_para_demographic_data_analyser.ipynb
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e2508da7",
    "metadata": {},
    "outputs": [],
@@ -1753,11 +1753,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d7b0a1df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7841"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.loc[df['salary'] == '>50K'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -1765,7 +1778,9 @@
    "id": "28b6d36c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc[df['salary'] == '>50K' & df['hours-per-week'] == 1]"
+   ]
   },
   {
    "cell_type": "code",
