--- a/medical_data_visualizer/tests_for_medical_analysis.ipynb
+++ b/medical_data_visualizer/tests_for_medical_analysis.ipynb
@@ -267,19 +267,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94af83eb",
+   "execution_count": 5,
+   "id": "f7621fe7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        168\n",
+       "1        156\n",
+       "2        165\n",
+       "3        169\n",
+       "4        156\n",
+       "        ... \n",
+       "69995    168\n",
+       "69996    158\n",
+       "69997    183\n",
+       "69998    163\n",
+       "69999    170\n",
+       "Name: height, Length: 70000, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['height']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "94af83eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        21.967120\n",
+       "1        34.927679\n",
+       "2        23.507805\n",
+       "3        28.710479\n",
+       "4        23.011177\n",
+       "           ...    \n",
+       "69995    26.927438\n",
+       "69996    50.472681\n",
+       "69997    31.353579\n",
+       "69998    27.099251\n",
+       "69999    24.913495\n",
+       "Length: 70000, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BMI = df['weight'] / ((df['height'] / 100) ** 2)\n",
+    "BMI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5fd9a636",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        1\n",
+       "2        0\n",
+       "3        1\n",
+       "4        0\n",
+       "        ..\n",
+       "69995    1\n",
+       "69996    1\n",
+       "69997    1\n",
+       "69998    1\n",
+       "69999    0\n",
+       "Name: overweight, Length: 70000, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['overweight'] = [1 if i > 25 else 0 for i in df['weight'] / ((df['height'] / 100) ** 2)]\n",
+    "df['overweight']"
+   ]
   },
   {
    "cell_type": "code",
