--- a/medical_data_visualizer/tests_for_medical_analysis.ipynb
+++ b/medical_data_visualizer/tests_for_medical_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "2a44c0ca",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4b54b60",
+   "id": "628e0905",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "5fd9a636",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "Name: overweight, Length: 70000, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "c771b79e",
    "metadata": {},
    "outputs": [
@@ -390,6 +390,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>cardio</th>\n",
        "      <th>variable</th>\n",
        "      <th>value</th>\n",
        "    </tr>\n",
@@ -397,26 +398,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>cholesterol</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>cholesterol</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>cholesterol</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>cholesterol</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0</td>\n",
        "      <td>cholesterol</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -424,75 +430,214 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>419995</th>\n",
+       "      <td>0</td>\n",
        "      <td>overweight</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>419996</th>\n",
+       "      <td>1</td>\n",
        "      <td>overweight</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>419997</th>\n",
+       "      <td>1</td>\n",
        "      <td>overweight</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>419998</th>\n",
+       "      <td>1</td>\n",
        "      <td>overweight</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>419999</th>\n",
+       "      <td>0</td>\n",
        "      <td>overweight</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>420000 rows × 2 columns</p>\n",
+       "<p>420000 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           variable  value\n",
-       "0       cholesterol      0\n",
-       "1       cholesterol      1\n",
-       "2       cholesterol      1\n",
-       "3       cholesterol      0\n",
-       "4       cholesterol      0\n",
-       "...             ...    ...\n",
-       "419995   overweight      1\n",
-       "419996   overweight      1\n",
-       "419997   overweight      1\n",
-       "419998   overweight      1\n",
-       "419999   overweight      0\n",
+       "        cardio     variable  value\n",
+       "0            0  cholesterol      0\n",
+       "1            1  cholesterol      1\n",
+       "2            1  cholesterol      1\n",
+       "3            1  cholesterol      0\n",
+       "4            0  cholesterol      0\n",
+       "...        ...          ...    ...\n",
+       "419995       0   overweight      1\n",
+       "419996       1   overweight      1\n",
+       "419997       1   overweight      1\n",
+       "419998       1   overweight      1\n",
+       "419999       0   overweight      0\n",
        "\n",
-       "[420000 rows x 2 columns]"
+       "[420000 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.melt(df, value_vars=['cholesterol', 'gluc', 'smoke', 'alco', 'active','overweight'])"
+    "o = pd.melt(df, id_vars='cardio', value_vars=['cholesterol', 'gluc', 'smoke', 'alco', 'active','overweight'])\n",
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "38b764f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = o.groupby('cardio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aea08ba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cardio</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cholesterol</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cholesterol</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cholesterol</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cholesterol</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cholesterol</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419993</th>\n",
+       "      <td>1</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419994</th>\n",
+       "      <td>1</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419996</th>\n",
+       "      <td>1</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419997</th>\n",
+       "      <td>1</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419998</th>\n",
+       "      <td>1</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>209874 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        cardio     variable  value\n",
+       "1            1  cholesterol      1\n",
+       "2            1  cholesterol      1\n",
+       "3            1  cholesterol      0\n",
+       "7            1  cholesterol      1\n",
+       "15           1  cholesterol      0\n",
+       "...        ...          ...    ...\n",
+       "419993       1   overweight      0\n",
+       "419994       1   overweight      1\n",
+       "419996       1   overweight      1\n",
+       "419997       1   overweight      1\n",
+       "419998       1   overweight      1\n",
+       "\n",
+       "[209874 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.get_group(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90fd1e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46fd0a36",
+   "id": "ff6d2aa9",
    "metadata": {},
    "outputs": [],
    "source": []
