limpando os valores em que a pressão diastólica é maior que a pressão sistólica

--- a/medical_data_visualizer/tests_for_medical_analysis.ipynb
+++ b/medical_data_visualizer/tests_for_medical_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "b0f9b5ff",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,39 @@
    "source": [
     "df['cholesterol'] = [1 if i > 1 else 0 for i in df['cholesterol']]\n",
     "df['gluc'] = [1 if i > 1 else 0 for i in df['gluc']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3eb860e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        1\n",
+       "2        0\n",
+       "3        1\n",
+       "4        0\n",
+       "        ..\n",
+       "69995    1\n",
+       "69996    1\n",
+       "69997    1\n",
+       "69998    1\n",
+       "69999    0\n",
+       "Name: overweight, Length: 70000, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df['overweight'] = [1 if i > 25 else 0 for i in df['weight'] / ((df['height'] / 100) ** 2)]\n",
+    "df['overweight']"
    ]
   },
   {
@@ -333,40 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5fd9a636",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        0\n",
-       "1        1\n",
-       "2        0\n",
-       "3        1\n",
-       "4        0\n",
-       "        ..\n",
-       "69995    1\n",
-       "69996    1\n",
-       "69997    1\n",
-       "69998    1\n",
-       "69999    0\n",
-       "Name: overweight, Length: 70000, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "    df['overweight'] = [1 if i > 25 else 0 for i in df['weight'] / ((df['height'] / 100) ** 2)]\n",
-    "df['overweight']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "c771b79e",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "[420000 rows x 3 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "id": "5eb2b224",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x173d5759ca0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2aea8b4d970>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,11 +531,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5e891c24",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         80\n",
+       "1         90\n",
+       "2         70\n",
+       "3        100\n",
+       "4         60\n",
+       "        ... \n",
+       "69995     80\n",
+       "69996     90\n",
+       "69997     90\n",
+       "69998     80\n",
+       "69999     80\n",
+       "Name: ap_lo, Length: 70000, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ap_lo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b5d25074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        110\n",
+       "1        140\n",
+       "2        130\n",
+       "3        150\n",
+       "4        100\n",
+       "        ... \n",
+       "69995    120\n",
+       "69996    140\n",
+       "69997    180\n",
+       "69998    135\n",
+       "69999    120\n",
+       "Name: ap_hi, Length: 70000, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ap_hi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0b80eaa7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.loc[df['ap_lo'] <= df['ap_hi']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c53383b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>alco</th>\n",
+       "      <th>active</th>\n",
+       "      <th>cardio</th>\n",
+       "      <th>overweight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, age, gender, height, weight, ap_hi, ap_lo, cholesterol, gluc, smoke, alco, active, cardio, overweight]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['ap_lo'] > df['ap_hi']]"
+   ]
   }
  ],
  "metadata": {
