limpando os valores em que o quantil de altura é abaixo de 0.025

--- a/medical_data_visualizer/tests_for_medical_analysis.ipynb
+++ b/medical_data_visualizer/tests_for_medical_analysis.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3eb860e2",
+   "id": "fe9c59a5",
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +63,24 @@
    "source": [
     " df['overweight'] = [1 if i > 25 else 0 for i in df['weight'] / ((df['height'] / 100) ** 2)]\n",
     "df['overweight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "560c3cfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[df['ap_lo'] <= df['ap_hi']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9448bc78",
+   "metadata": {},
+   "source": [
+    "SEMPRE EXECUTAR TUDO ACIMA DESSA CÉLULA"
    ]
   },
   {
@@ -497,17 +515,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "5eb2b224",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2aea8b4d970>"
+       "<seaborn.axisgrid.FacetGrid at 0x2aea8cd52e0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -564,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b5d25074",
+   "id": "4ae7705a",
    "metadata": {},
    "outputs": [
     {
@@ -595,76 +615,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0b80eaa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.loc[df['ap_lo'] <= df['ap_hi']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "c53383b3",
+   "execution_count": 25,
+   "id": "ee29370c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>height</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>ap_hi</th>\n",
-       "      <th>ap_lo</th>\n",
-       "      <th>cholesterol</th>\n",
-       "      <th>gluc</th>\n",
-       "      <th>smoke</th>\n",
-       "      <th>alco</th>\n",
-       "      <th>active</th>\n",
-       "      <th>cardio</th>\n",
-       "      <th>overweight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [id, age, gender, height, weight, ap_hi, ap_lo, cholesterol, gluc, smoke, alco, active, cardio, overweight]\n",
-       "Index: []"
+       "0        168\n",
+       "1        156\n",
+       "2        165\n",
+       "3        169\n",
+       "4        156\n",
+       "        ... \n",
+       "69995    168\n",
+       "69996    158\n",
+       "69997    183\n",
+       "69998    163\n",
+       "69999    170\n",
+       "Name: height, Length: 68766, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['ap_lo'] > df['ap_hi']]"
+    "df['height']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d324b120",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "         ...  \n",
+       "69995    False\n",
+       "69996    False\n",
+       "69997    False\n",
+       "69998    False\n",
+       "69999    False\n",
+       "Name: height, Length: 68766, dtype: bool"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['height'] < df['height'].quantile(0.025)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "badde9c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
